# backend/public/docs/api-docs.yaml
@@ -81,5 +81,14 @@ paths:
   
   /api/rsvps-invitation/{invitation_id}:
     $ref: './rsvp.yaml#/RsvpInvitation_InvitationID'
+
+  /api/guests:
+    $ref: './guest.yaml#/Guests'
+
+  /api/guests/{id}:
+    $ref: './guest.yaml#/Guest_id'
+  
+  /api/guests-invitation/{invitation_id}:
+    $ref: './guest.yaml#/GuestInvitation_InvitationID'
   
 
